# raytracing

./: CMakeLists.txt  camera.h  checkerboard.ppm  color.h  cylinder.h  generate_anamorphic_photo.py  hittable.h  hittable_list.h  im.ppm  im100.ppm  im1000.ppm  image.h  interval.h  main.cc  material.h  quad.h  ray.h  rtweekend.h  sphere.h  vec3.h
